Adding the new files

--- a/pom.xml
+++ b/pom.xml
@@ -14,20 +14,27 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
-  <dependencies>
-  
+  <dependencies>  
+
 <dependency>
     <groupId>org.testng</groupId>
     <artifactId>testng</artifactId>
-    <version>7.1.0</version>
+    <version>7.3.0</version>
     <scope>test</scope>
 </dependency>
+
+
 <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
     <artifactId>selenium-java</artifactId>
     <version>4.0.0-alpha-6</version>
 </dependency>
 
-    
+<dependency>
+    <groupId>com.relevantcodes</groupId>
+    <artifactId>extentreports</artifactId>
+    <version>2.41.2</version>
+</dependency>    
+ 
   </dependencies>
 </project>
